# serializer version: 1
# name: test_states[switch.front_door_in_home_chime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.front_door_in_home_chime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'In-home chime',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'in_home_chime',
    'unique_id': '987654-in_home_chime',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[switch.front_door_in_home_chime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Front Door In-home chime',
    }),
    'context': <ANY>,
    'entity_id': 'switch.front_door_in_home_chime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_states[switch.front_door_motion_detection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.front_door_motion_detection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Motion detection',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'motion_detection',
    'unique_id': '987654-motion_detection',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[switch.front_door_motion_detection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Front Door Motion detection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.front_door_motion_detection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_states[switch.front_motion_detection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.front_motion_detection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Motion detection',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'motion_detection',
    'unique_id': '765432-motion_detection',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[switch.front_motion_detection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Front Motion detection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.front_motion_detection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_states[switch.front_siren-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.front_siren',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Siren',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'siren',
    'unique_id': '765432-siren',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[switch.front_siren-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Front Siren',
    }),
    'context': <ANY>,
    'entity_id': 'switch.front_siren',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_states[switch.internal_motion_detection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.internal_motion_detection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Motion detection',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'motion_detection',
    'unique_id': '345678-motion_detection',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[switch.internal_motion_detection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Internal Motion detection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.internal_motion_detection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_states[switch.internal_siren-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.internal_siren',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Siren',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'siren',
    'unique_id': '345678-siren',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[switch.internal_siren-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Internal Siren',
    }),
    'context': <ANY>,
    'entity_id': 'switch.internal_siren',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
